实现用户注册、用户排行榜等功能
