# router/app.go
@@ -2,6 +2,7 @@ package router
 
 import (
 	_ "Online-Practice/docs"
+	"Online-Practice/middlewares"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
@@ -18,6 +19,8 @@ func Router() *gin.Engine {
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	//问题列表
 	r.GET("/problem-list", GetProblem)
+	//问题创建 先检查是否为管理员，再创建问题
+	r.POST("/problem-add", middlewares.AdminCheck(), AddProblem)
 	//提交列表
 	r.GET("/submit-list", GetSubmit)
 	//用户列表
